<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.2.2</version>
    <relativePath />
  </parent>

  <groupId>com.lm_pakkanen</groupId>
  <artifactId>radio_pele_java</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>radio-pele-java</name>
  <description></description>

  <properties>
    <java.version>21</java.version>
  </properties>

  <repositories>
    <repository>
      <id>jitpack</id>
      <url>https://jitpack.io</url>
    </repository>

    <repository>
      <id>arbjergDev-snapshots</id>
      <name>Lavalink Repository</name>
      <url>https://maven.lavalink.dev/snapshots</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter</artifactId>
      <exclusions>
        <exclusion>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-logging</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-log4j2</artifactId>
      <version>3.2.3</version>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>com.vaadin.external.google</groupId>
          <artifactId>android-json</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>io.github.lm-pakkanen</groupId>
      <artifactId>tidal_api</artifactId>
      <version>0.0.1</version>
    </dependency>

    <dependency>
      <groupId>net.dv8tion</groupId>
      <artifactId>JDA</artifactId>
      <version>5.0.0-beta.21</version>
    </dependency>

    <dependency>
      <groupId>dev.arbjerg</groupId>
      <artifactId>lavaplayer</artifactId>
      <version>0eaeee195f0315b2617587aa3537fa202df07ddc-SNAPSHOT</version>
    </dependency>

    <dependency>
      <groupId>se.michaelthelin.spotify</groupId>
      <artifactId>spotify-web-api-java</artifactId>
      <version>8.3.5</version>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.jr</groupId>
      <artifactId>jackson-jr-objects</artifactId>
      <version>2.13.0</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>

      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <proc>none</proc>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <configuration>
          <argLine>-Xshare:off -XX:+EnableDynamicAgentLoading</argLine>
          <parallel>all</parallel>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>${maven-failsafe-plugin.version}</version>
        <configuration>
          <argLine>-Xshare:off</argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>